--- a/run/lemmings.html
+++ b/run/lemmings.html
@@ -50,6 +50,10 @@
     Level: <input type="button" onclick="debugView.moveToLevel(-1)" value=" &#10073;&#9664;" /><span id="levelno" >0</span>
     <input type="button" onclick="debugView.moveToLevel(1)" value=" &#9658;&#10073;" />
 
+    &nbsp;
+
+    <input type="button" onclick="debugView.run()" value=" run()" />
+
     <br />
 
     <!-- https://stackoverflow.com/questions/22885702/html-for-the-pause-symbol-in-a-video-control -->
