add cheat method

--- a/run/lemmings.html
+++ b/run/lemmings.html
@@ -70,6 +70,8 @@
 
     <span id="gameState"></span>
 
+    <input type="button" onclick="debugView.cheat()" value="cheat" />
+
     <br />
 
     <!-- https://stackoverflow.com/questions/22885702/html-for-the-pause-symbol-in-a-video-control -->
